force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/vlocity_cmt__PaymentAdjustment__c.object-meta.xml
<CustomObject>
    <description>Payment adjustments allow a Customer Service Rep to request an adjustment to a customer&apos;s billing statement. For example, this could occur as the result of a case that was registered to dispute a prior billing or product issue. Once the adjustment is approved, it can then be fed to the client&apos;s billing system for processing. This object can also be used to register a client&apos;s payment independent of any dispute.</description>
    <label>Payment Adjustment</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Payment Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>