force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__DisputeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DisputeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payments / Adjustments</relationshipLabel>
    <relationshipName>Payment_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>