force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__Method__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Adjustment Credit</fullName>
            </value>
            <value>
                <fullName>Adjustment Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>