force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_cmt__PaymentMethod__c.vlocity_cmt__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.vlocity_cmt__AccountId__c</field>
            <operation>equals</operation>
            <valueField>vlocity_cmt__PaymentMethod__c.vlocity_cmt__AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment Adjustments</relationshipLabel>
    <relationshipName>Payment_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>