force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__ServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceAmount__c</fullName>
    <label>Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>