force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceEndDate__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>