force-app/main/default/objects/vlocity_cmt__PaymentAdjustment__c/fields/vlocity_cmt__TotalInstallments__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalInstallments__c</fullName>
    <label>Total Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>